--- a/100m.tex
+++ b/100m.tex
@@ -10,6 +10,7 @@
 
 % 1MoA = ((2*Pi*100)/(360*60))*100
 \newcommand{\OneMOA}{29.08882086657216mm}
+\newcommand{\circleStep}{12mm}
 
 \newcommand{\horizontalStepSize}{\OneMOA}
 \newcommand{\verticalStepSize}{\OneMOA}
@@ -35,6 +36,48 @@
     \draw[color=black, fill=white, rotate around={45:(0, 0)}] (\OneMOA /4 ,\OneMOA /4) rectangle (-\OneMOA /4 , -\OneMOA /4);
   \end{scope}
 }
+
+% Precision target - 100m
+\newcommand\benkyKolecko{
+  \begin{scope}[shift={(0mm,0mm)}]
+    \draw[line width=2mm] (-6mm, 0mm) -- (6mm, 0mm);
+    \draw[line width=2mm] (0mm, -6mm) -- (0mm, 6mm);
+    \draw[line width=3mm] (0in, 0in) circle (\circleStep/2);
+    \draw[line width=3mm] (0in, 0in) circle (\circleStep);
+    \draw[line width=1mm] (0in, 0in) circle (2 * \circleStep);
+    \draw[line width=3mm] (0in, 0in) circle (3 * \circleStep);
+
+    \node[scale=3.0] at (0mm, 1.5 * \circleStep) {\large \textbf{9}};
+    \node[scale=3.0] at (0mm, -1.5 * \circleStep) {\large \textbf{9}};
+    \node[scale=3.0] at (1.5 * \circleStep, 0mm) {\large \textbf{9}};
+    \node[scale=3.0] at (-1.5 * \circleStep, 0mm) {\large \textbf{9}};
+
+    \node[scale=3.0] at (0mm, 2.5 * \circleStep) {\large \textbf{8}};
+    \node[scale=3.0] at (0mm, -2.5 * \circleStep) {\large \textbf{8}};
+    \node[scale=3.0] at (2.5 * \circleStep, 0mm) {\large \textbf{8}};
+    \node[scale=3.0] at (-2.5 * \circleStep, 0mm) {\large \textbf{8}};
+  \end{scope}
+}
+\begin{tikzpicture}
+  \begin{scope}[shift={(3,5)}]
+    \benkyKolecko
+  \end{scope}
+  \begin{scope}[shift={(13, 5)}]
+    \benkyKolecko
+  \end{scope}
+  \begin{scope}[shift={(23, 5)}]
+    \benkyKolecko
+  \end{scope}
+  \begin{scope}[shift={(3,15)}]
+    \benkyKolecko
+  \end{scope}
+  \begin{scope}[shift={(13, 15)}]
+    \benkyKolecko
+  \end{scope}
+  \begin{scope}[shift={(23, 15)}]
+    \benkyKolecko
+  \end{scope}
+\end{tikzpicture}
 
 \begin{tikzpicture}
   \begin{scope}[shift={(5,5)}]
