--- a/600m.tex
+++ b/600m.tex
@@ -8,56 +8,41 @@
 
 \begin{document}
 
-% 1MoA = ((2*Pi*300)/(360*60))*100
-\newcommand{\OneMOA}{145.37037037037038mm}
-
-
-% Red diamond with cross
-\newcommand\benkysCross{
-  \draw[fill=white, color=white] (0cm,0cm) rectangle (10cm,-10cm);
-  \draw[line width=2mm, fill=black] (0cm, 0cm) circle [radius=17mm];
-  \draw[line width=2mm] (0cm, 0cm) circle [radius=64mm]; % << poor man's spacing :-/
-
-  \draw[line width=4mm, color=white] (-10mm, -10mm) -- (10mm, 10mm);
-  \draw[line width=4mm, color=white] (-10mm, 10mm) -- (10mm, -10mm);  
-}
-
-\begin{tikzpicture}
-  \begin{scope}[shift={(5,5)}]
-    \benkysCross
-  \end{scope}
-  \begin{scope}[shift={(25,5)}]
-    \benkysCross
-  \end{scope}
-  \begin{scope}[shift={(45,5)}]
-    \benkysCross
-  \end{scope}
-\end{tikzpicture}
+\newcommand{\smallFont}{6.0}
+\newcommand{\largeFont}{10.0}
+\newcommand{\circleDistance}{50mm}
+\newcommand{\circleTen}{59mm}
+\newcommand{\baseOffset}{33mm}
+\newcommand{\xLength}{10mm}
+\newcommand{\textTen}{\baseOffset/2+\circleTen/2}
+\newcommand{\textTenNeg}{-\baseOffset/2-\circleTen/2}
 
 \begin{tikzpicture}
   \begin{scope}[shift={(210mm,300mm)}]
-    \draw[line width=2mm, fill=black] (0cm, 0cm) circle (218mm/2); % 9
-    \draw[line width=2mm, color=white, fill=black] (0cm, 0cm) circle (118mm/2); % 10
-    \draw[line width=2mm, color=black, fill=white] (-33mm, -33mm) rectangle (33mm, 33mm); % box
-    \draw[line width=2mm, color=black, fill=white] (0cm, 0cm) circle (50mm/2); % X    
+    \draw[line width=2mm, fill=black] (0cm, 0cm) circle (\circleTen+\circleDistance); % 9
+    \draw[line width=2mm, color=white, fill=black] (0cm, 0cm) circle (\circleTen); % 10
+    \draw[line width=2mm, color=black, fill=white] (-\baseOffset, -\baseOffset) rectangle (\baseOffset, \baseOffset); % box
+    \draw[line width=2mm, color=black, fill=white] (0cm, 0cm) circle (\circleDistance/2); % X    
 
-    \draw[line width=4mm] (-10mm, -10mm) -- (10mm, 10mm);
-    \draw[line width=4mm] (-10mm, 10mm) -- (10mm, -10mm);
+    \draw[line width=8mm] (-\xLength, -\xLength) -- (\xLength, \xLength);
+    \draw[line width=8mm] (-\xLength,  \xLength) -- (\xLength, -\xLength);
     
-    \node[scale=6.0, color=white] at (0mm, 45mm) {\large \textbf{10}};
-    \node[scale=10.0, color=white] at (0mm, 82mm) {\large \textbf{9}};
+    \node[scale=\smallFont, color=white] at (0mm, \textTen) {\large \textbf{10}};
+    \node[scale=\largeFont, color=white] at (0mm, \baseOffset+\circleDistance) {\large \textbf{9}};
+    \node[scale=\smallFont, color=white] at (0mm, \textTenNeg) {\large \textbf{10}};
+    \node[scale=\largeFont, color=white] at (0mm, -\baseOffset-\circleDistance) {\large \textbf{9}};
     
-    \draw[line width=2mm] (0cm, 0cm) circle (318mm/2);
-    \draw[line width=2mm] (0cm, 0cm) circle (418mm/2);
-    \draw[line width=2mm] (0cm, 0cm) circle (518mm/2);
+    \draw[line width=2mm] (0cm, 0cm) circle (\circleTen+2*\circleDistance);
+    \draw[line width=2mm] (0cm, 0cm) circle (\circleTen+3*\circleDistance);
+    \draw[line width=2mm] (0cm, 0cm) circle (\circleTen+4*\circleDistance);
 
-    \node[scale=10.0, color=black] at (134mm, 0mm) {\large \textbf{8}};
-    \node[scale=10.0, color=black] at (184mm, 0mm) {\large \textbf{7}};
-    \node[scale=10.0, color=black] at (234mm, 0mm) {\large \textbf{6}};        
+    \node[scale=\largeFont, color=black] at (\baseOffset+2*\circleDistance, 0mm) {\large \textbf{8}};
+    \node[scale=\largeFont, color=black] at (\baseOffset+3*\circleDistance, 0mm) {\large \textbf{7}};
+    \node[scale=\largeFont, color=black] at (\baseOffset+4*\circleDistance, 0mm) {\large \textbf{6}};        
 
-    \node[scale=10.0, color=black] at (-134mm, 0mm) {\large \textbf{8}};
-    \node[scale=10.0, color=black] at (-184mm, 0mm) {\large \textbf{7}};
-    \node[scale=10.0, color=black] at (-234mm, 0mm) {\large \textbf{6}};        
+    \node[scale=\largeFont, color=black] at (-\baseOffset-2*\circleDistance, 0mm) {\large \textbf{8}};
+    \node[scale=\largeFont, color=black] at (-\baseOffset-3*\circleDistance, 0mm) {\large \textbf{7}};
+    \node[scale=\largeFont, color=black] at (-\baseOffset-4*\circleDistance, 0mm) {\large \textbf{6}};        
 \end{scope}
 \end{tikzpicture}
 
