F-class-PL Update base grid to dashed lines

--- a/f-class-pl/300m-a1.tex
+++ b/f-class-pl/300m-a1.tex
@@ -35,11 +35,11 @@
 %        \draw [very thin,gray] (\xMin,\i) -- (\xMax,\i) node [left] at (\xMin,\i) {$\i$};
 %    }
 
-    \draw [step=10.902mm,blue, very thick] (0mm,0mm) grid (163.53mm,163.53mm);
-    \draw [step=10.902mm,blue, very thick] (0mm,0mm) grid (-163.53mm,-163.53mm);
+    \draw [step=10.902mm,black, thick, dashed] (0mm,0mm) grid (163.53mm,163.53mm);
+    \draw [step=10.902mm,black, thick, dashed] (0mm,0mm) grid (-163.53mm,-163.53mm);
 
-    \draw [step=10.902mm,blue, very thick] (0mm,0mm) grid (-163.53mm,163.53mm);
-    \draw [step=10.902mm,blue, very thick] (0mm,0mm) grid (163.53mm,-163.53mm);
+    \draw [step=10.902mm,black, thick, dashed] (0mm,0mm) grid (-163.53mm,163.53mm);
+    \draw [step=10.902mm,black, thick, dashed] (0mm,0mm) grid (163.53mm,-163.53mm);
 %    \draw [very thick, brown, step=1.0cm,xshift=-0.5cm, yshift=-0.5cm] (0.5,0.5) grid +(5.5,4.5);
 
 }
