--- a/f-class-pl/300m-a1.tex
+++ b/f-class-pl/300m-a1.tex
@@ -22,14 +22,6 @@
     \draw[line width=4mm] (-4mm,  4mm) -- (4mm, -4mm);
     % [END] Draw X
 
-    % grid
-%    \foreach \i in {\xMin,...,\xMax} {
-%        \draw [very thin,gray] (\i,\yMin) -- (\i,\yMax)  node [below] at (\i,\yMin) {$\i$};
-%    }
-%    \foreach \i in {\yMin,...,\yMax} {
-%        \draw [very thin,gray] (\xMin,\i) -- (\xMax,\i) node [left] at (\xMin,\i) {$\i$};
-%    }
-
     % Base grid
     \draw [step=10.902mm,black, thick, dashed] (0mm,0mm) grid (163.53mm,163.53mm);
     \draw [step=10.902mm,black, thick, dashed] (0mm,0mm) grid (-163.53mm,-163.53mm);
@@ -42,9 +34,19 @@
     \draw [step=87.216mm,blue, thick] (0mm,0mm) grid (-163.53mm,163.53mm);
     \draw [step=87.216mm,blue, thick] (0mm,0mm) grid (163.53mm,-163.53mm);
 
+    % Texts
+    \node[scale=3.0, color=white] at (0mm, 21mm) {\large \textbf{10}};
+    \node[scale=3.0, color=white] at (0mm, 42mm) {\large \textbf{9}};
 
-%    \draw [very thick, brown, step=1.0cm,xshift=-0.5cm, yshift=-0.5cm] (0.5,0.5) grid +(5.5,4.5);
+    \node[scale=3.0, color=black] at (   67mm, 0mm) {\large \textbf{8}};
+    \node[scale=3.0, color=black] at (   92mm, 0mm) {\large \textbf{7}};
+    \node[scale=3.0, color=black] at (117mm, 0mm) {\large \textbf{6}};
+    \node[scale=3.0, color=black] at (142mm, 0mm) {\large \textbf{5}};
 
+    \node[scale=3.0, color=black] at (   -67mm, 0mm) {\large \textbf{8}};
+    \node[scale=3.0, color=black] at (   -92mm, 0mm) {\large \textbf{7}};
+    \node[scale=3.0, color=black] at (-117mm, 0mm) {\large \textbf{6}};
+    \node[scale=3.0, color=black] at (-142mm, 0mm) {\large \textbf{5}};
 }
 }
 
